Dynamically-added backdrop filter to clip-path'd element with 3D transform renders incorrectly (without clip) https://bugs.webkit.org/show_bug.cgi?id=163497

Reviewed by Simon Fraser.

Source/WebCore:

Test: css3/filters/backdrop/dynamic-with-clip-path.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::ensureStructuralLayer): Added MaskLayerChanged to
  structuralLayerChangeFlags to ensure that the mask layer is updated.

LayoutTests:

Based on the test case from Tim Horton.

* css3/filters/backdrop/dynamic-with-clip-path-expected.html: Added.
* css3/filters/backdrop/dynamic-with-clip-path.html: Added.



Canonical link: https://commits.webkit.org/181601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207723 268f45cc-cd09-0410-ab3c-d52691b4dbfc